--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -11,8 +11,8 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{classGame}{Game}} }{\pageref{classGame}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classMyComponents_1_1MoveEnemy}{My\+Components\+::\+Move\+Enemy}} }{\pageref{classMyComponents_1_1MoveEnemy}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classMyComponents_1_1MoveSystem}{My\+Components\+::\+Move\+System}} }{\pageref{classMyComponents_1_1MoveSystem}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classNetWorkClient}{Net\+Work\+Client}} \\*Class for Net\+Work Client }{\pageref{classNetWorkClient}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classNetWorkServer}{Net\+Work\+Server}} \\*Class for Net\+Work Server }{\pageref{classNetWorkServer}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classNetWorkClient}{Net\+Work\+Client}} }{\pageref{classNetWorkClient}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classNetWorkServer}{Net\+Work\+Server}} }{\pageref{classNetWorkServer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structMyComponents_1_1Position}{My\+Components\+::\+Position}} }{\pageref{structMyComponents_1_1Position}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classRegistry}{Registry}} \\*\mbox{\hyperlink{classRegistry}{Registry}} class }{\pageref{classRegistry}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structMyComponents_1_1Scrolling}{My\+Components\+::\+Scrolling}} }{\pageref{structMyComponents_1_1Scrolling}}{}
